using proper solr base images (9.4.1) and changed to use mounted volume for index data